[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pvs-hass-mqtt"
authors = [
  { name="Kevin P. Fleming", email="kevin@km6g.us" },
]
description = "An MQTT-based integration for SunPower PVS and Home Assistant"
readme = "README.md"
license = { text="Apache-2.0" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
    "attrs",
    "Cerberus",
    "paho-mqtt",
    "PyYAML",
    "requests",
]

[project.optional-dependencies]
systemd = [
    "systemd-python",
]

[project.urls]
"Homepage" = "https://github.com/kpfleming/pvs-hass-mqtt"
"Bug Tracker" = "https://github.com/kpfleming/pvs-hass-mqttt/issues"

[project.scripts]
pvs-hass-mqtt = "pvs_hass_mqtt.cli:cli"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/pvs_hass_mqtt/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "tests",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/pvs_hass_mqtt",
    "src/hass_mqtt",
]

[tool.hatch.envs.lint]
dependencies = [
    "black==22.6.0",
    "flake8==4.0.1",
    "flake8-annotations==2.9.0",
    "flake8-bugbear==22.7.1",
    "flake8-builtins==1.5.3",
    "flake8-comprehensions==3.10.0",
#    "flake8-docstrings",
    "flake8-new-union-types==0.4.1",
    "flake8-pep585==0.1.5.1",
    "flake8-pytest-style==1.6.0",
    "flake8-use-fstring==1.4",
    "isort==5.10.1",
    "mypy==0.971",
    "pep8-naming==0.13.1",
    "types-PyYAML",
    "types-requests",
]

[tool.hatch.envs.lint.scripts]
lint = [
     "black .",
     "isort .",
     "flake8",
     "mypy .",
     "shellcheck workflow-support/*.sh",
]

[tool.hatch.envs.ci]
dependencies = [
    "pytest",
]

[[tool.hatch.envs.ci.matrix]]
python = ["3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.ci.scripts]
ci = "ls"

[tool.hatch.envs.ci-systemd]
features = [
    "systemd",
]
dependencies = [
    "pytest",
]

[[tool.hatch.envs.ci-systemd.matrix]]
python = ["3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.ci-systemd.scripts]
ci = "ls"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
